2024-01-24T16:07:03Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7642944758 # 53
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-24
* notice: last 14d: unq all: 67 129
* notice: prev accum: outdated-unq outdated-all / unq all: 1575 3576 / 1679 3722
* notice: next accum: outdated-unq outdated-all / unq all: 1575 3576 / 1679 3723
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -1 -1 / +2 +4 -0 -0 / 2 4
* notice: removed / changed dates: [] / [2024-01-10 2024-01-24]

2024-01-24T08:07:49Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7637233804 # 52
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-24
* notice: last 14d: unq all: 67 129
* notice: prev accum: outdated-unq outdated-all / unq all: 1575 3576 / 1677 3719
* notice: next accum: outdated-unq outdated-all / unq all: 1575 3576 / 1679 3722
* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -11 -17 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2024-01-10 2024-01-24]

2024-01-23T16:06:45Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7628526834 # 50
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-23
* notice: last 14d: unq all: 73 143
* notice: prev accum: outdated-unq outdated-all / unq all: 1566 3564 / 1670 3709
* notice: next accum: outdated-unq outdated-all / unq all: 1575 3576 / 1677 3719
* notice: prev exec diff / last date diff / accum: unq all: +7 +10 -0 -0 / +8 +11 -0 -0 / 8 11
* notice: removed / changed dates: [2024-01-09] / [2024-01-23]

2024-01-23T08:08:01Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7622747002 # 49