@@ -1,15 +1,10 @@
 {
-  "count": 129,
-  "uniques": 67,
+  "count": 120,
+  "uniques": 64,
   "clones": [
     {
-      "timestamp": "2024-01-10T00:00:00Z",
-      "count": 7,
-      "uniques": 6
-    },
-    {
       "timestamp": "2024-01-11T00:00:00Z",
-      "count": 24,
+      "count": 22,
       "uniques": 16
     },
     {
